--- a/Angular/Angular.csproj
+++ b/Angular/Angular.csproj
@@ -78,6 +78,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\AngularFormApp.js" />
+    <Content Include="app\DecisionForm\dfController.js" />
+    <Content Include="app\DecisionForm\dfDirective.js" />
+    <Content Include="app\DecisionForm\dfService.js" />
+    <Content Include="app\DecisionForm\dfTemplate.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
