Working with Data Service and CRUD operations

--- a/Angular/Angular.csproj
+++ b/Angular/Angular.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\Home.html" />
     <Content Include="Scripts\version.json" />
     <Content Include="Scripts\errors.json" />
     <Content Include="Scripts\angular-touch.min.js.map" />
@@ -81,7 +82,7 @@
     <Content Include="app\AngularFormApp.js" />
     <Content Include="app\DecisionForm\dfController.js" />
     <Content Include="app\DecisionForm\dfDirective.js" />
-    <Content Include="app\DecisionForm\dfService.js" />
+    <Content Include="app\DataService.js" />
     <Content Include="app\DecisionForm\dfTemplate.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
