--- a/Angular/Angular.csproj
+++ b/Angular/Angular.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app\DecisionForm\dfCriteriaTemplate.html" />
+    <Content Include="app\DecisionForm\Templates\dfCriteriaTemplate.html" />
     <Content Include="app\homeController.js" />
     <Content Include="app\Home.html" />
     <Content Include="Scripts\version.json" />
@@ -85,7 +85,7 @@
     <Content Include="app\DecisionForm\dfController.js" />
     <Content Include="app\DecisionForm\dfDirective.js" />
     <Content Include="app\DataService.js" />
-    <Content Include="app\DecisionForm\dfTemplate.html" />
+    <Content Include="app\DecisionForm\Templates\dfTemplate.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
