--- a/Angular/Angular.csproj
+++ b/Angular/Angular.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="app\DecisionForm\Templates\dfCriteriaTemplate.html" />
     <Content Include="app\DecisionForm\Templates\dfDecisionObjectTemplate.html" />
+    <Content Include="app\DecisionForm\Templates\dfValueTemplate.html" />
     <Content Include="app\homeController.js" />
     <Content Include="app\Home.html" />
     <Content Include="Scripts\version.json" />
