--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -212,6 +212,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CriterionViewModel.cs" />
+    <Compile Include="Models\DecisionViewModel.cs" />
+    <Compile Include="Models\DecisionSubjectViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MeViewModels.cs" />
