--- a/Kon.Voi.Math/Kon.Voi.Math.csproj
+++ b/Kon.Voi.Math/Kon.Voi.Math.csproj
@@ -40,7 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Decision\DecisionMath.cs" />
+    <Compile Include="MathManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kon.Voi.Model\Kon.Voi.Model.csproj">
+      <Project>{20319a1c-df61-404e-ab93-2e5cccb111dd}</Project>
+      <Name>Kon.Voi.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
