--- a/WebApp/packages.config
+++ b/WebApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="angularjs" version="1.3.13" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
