Moved VM to Models project

--- a/Kon.Voi.Model/Kon.Voi.Model.csproj
+++ b/Kon.Voi.Model/Kon.Voi.Model.csproj
@@ -42,6 +42,9 @@
     <Compile Include="DecisionModels\Criterion.cs" />
     <Compile Include="DecisionModels\Decision.cs" />
     <Compile Include="DecisionModels\DecisionSubject.cs" />
+    <Compile Include="DecisionModels\ViewModels\CriterionViewModel.cs" />
+    <Compile Include="DecisionModels\ViewModels\DecisionSubjectViewModel.cs" />
+    <Compile Include="DecisionModels\ViewModels\DecisionViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
