--- a/WebApp/packages.config
+++ b/WebApp/packages.config
@@ -38,6 +38,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
